letter-spacing corrected

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -17,7 +17,7 @@
   font-weight: 700;
   color: var(--hover-focus-color);
   line-height: 1.17;
-  letter-spacing: 0.78px;
+  letter-spacing: 0.03em;
 }
 .studio,
 .studio-footer {
@@ -25,7 +25,7 @@
   font-weight: 400;
   color: var(--font-color-basic);
   line-height: 1.17;
-  letter-spacing: 0.78px;
+  letter-spacing: 0.03em;
 }
 .studio-footer {
   color: var(--font-color-special);
@@ -39,7 +39,7 @@ a:link {
   font-weight: 500;
   color: var(--font-color-describe);
   line-height: 1.17;
-  letter-spacing: 0.28px;
+  letter-spacing: 0.02em;
 }
 .navigation,
 a:visited {
@@ -48,7 +48,7 @@ a:visited {
   color: inherit;
   list-style: none;
   line-height: 1.17;
-  letter-spacing: 0.28px;
+  letter-spacing: 0.02em;
 }
 .kontakt {
   color: var(--font-color-describe);
@@ -56,7 +56,7 @@ a:visited {
   font-family: inherit;
   font-size: 14px;
   line-height: 1.17;
-  letter-spacing: 0.0175em;
+  letter-spacing: 0.02em;
 }
 a:hover {
   color: var(--hover-focus-color);
@@ -81,7 +81,7 @@ button {
   border: none;
   cursor: pointer;
   line-height: 1.625;
-  letter-spacing: 0.48px;
+  letter-spacing: 0.03em;
   margin-bottom: 8px;
 }
 .brand-pictures {
@@ -92,14 +92,14 @@ button {
   font-weight: 700;
   font-family: inherit;
   line-height: 2;
-  letter-spacing: 1.08px;
+  letter-spacing: 0.06em;
 }
 .brand-task-descr {
   font-size: 16px;
   font-family: inherit;
   color: var(--font-color-describe);
   line-height: 1.87;
-  letter-spacing: 0.48px;
+  letter-spacing: 0.03em;
 }
 button:hover {
   background-color: var(--hover-focus-color);
@@ -122,7 +122,7 @@ h1 {
   color: var(--font-color-special);
   font-weight: 900;
   line-height: 1.36;
-  letter-spacing: 2.64px;
+  letter-spacing: 0.06em;
 }
 h1 span {
   display: block;
@@ -135,13 +135,13 @@ h1 span {
   font-size: 14px;
   font-weight: 700;
   line-height: 1.17;
-  letter-spacing: 0.42px;
+  letter-spacing: 0.03em;
 }
 .list-descr {
   font-size: 14px;
   color: var(--font-color-describe);
   line-height: 1.71;
-  letter-spacing: 0.42px;
+  letter-spacing: 0.03em;
 }
 
 .task-list {
@@ -152,7 +152,7 @@ h1 span {
   font-weight: 700;
   text-align: center;
   line-height: 1.17;
-  letter-spacing: 1.08px;
+  letter-spacing: 0.03em;
 }
 .crew {
   background-color: var(--background-color-crew);
@@ -163,26 +163,26 @@ h1 span {
   font-weight: 700;
   text-align: center;
   line-height: 1.17;
-  letter-spacing: 1.08px;
+  letter-spacing: 0.03em;
 }
 .crew-name {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.17;
-  letter-spacing: 0.48px;
+  letter-spacing: 0.03em;
 }
 .crew-position {
   font-size: 16px;
   color: var(--font-color-describe);
   line-height: 1.17;
-  letter-spacing: 0.48px;
+  letter-spacing: 0.03em;
 }
 .address > ul {
   font-family: inherit;
   font-weight: inherit;
   color: var(--font-color-special);
   line-height: 1.71;
-  letter-spacing: 0.42px;
+  letter-spacing: 0.03em;
 }
 footer {
   background-color: var(--background-sides-element-color);
@@ -193,14 +193,14 @@ footer {
   font-weight: 500;
   list-style: none;
   line-height: 1.17;
-  letter-spacing: 0.28px;
+  letter-spacing: 0.03em;
 }
 .kontakt-down {
   font-size: 14px;
   list-style: none;
   color: var(--font-color-footer);
   line-height: 1.71;
-  letter-spacing: 0.42px;
+  letter-spacing: 0.03em;
 }
 .kontakt-footer a {
   font-size: 14px;
@@ -208,5 +208,5 @@ footer {
   font-family: inherit;
   font-weight: inherit;
   line-height: 1.71;
-  letter-spacing: 0.42px;
+  letter-spacing: 0.03em;
 }
